<resources>
    <string name="app_name">Targeton</string>
    <string name="title_activity_transactions">TransactionsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="calendar">Календар</string>
    <string name="transactions">Транзакції</string>
    <string name="settings">Налаштування</string>
    <string name="goals">Цілі</string>
    <string name="login_title">Вхід</string>
    <string name="sign_in">Увійти</string>
    <string name="registration">Реєстрація</string>
    <string name="transaction_spending">Витрати</string>
    <string name="transaction_income">Дохід</string>
    <string name="transaction_transfer">Переведення</string>
    <string name="transaction_debt">Борг</string>
    <string name="transaction_category">Категорія</string>
    <string name="transacton_account_from">З рахунку</string>
    <string name="transaction_amoun">Сума</string>
    <string name="transaction_date">Дата</string>
    <string name="transaction_account_to">На рахунок</string>
    <string name="save">Зберегти</string>
    <string name="cancel">Відмінити</string>
    <string name="transaction_edit">Редагування транзакції</string>
    <string name="date_select">Виберіть дату</string>
    <string name="OK">OK</string>
    <string name="spending">Витрати</string>
    <string name="income">Дохід</string>
    <string name="transfer">Переведення</string>
    <string name="debt">Борг</string>
    <string name="without_category"><![CDATA[<Без категорії/>]]></string>
    <string name="transaction_rate">Курс обміну</string>
    <string name="transaction_add_widget_title">Додати транзакцію</string>
    <string name="transaction_add">Додати транзакцію</string>
    <string name="add_category">Додати категорію</string>
    <string name="accounts">Рахунки</string>
    <string name="accounts_total">Всього на рахунках</string>
    <string name="tree">Дерево задач</string>
    <string name="tree_title">Дерево задач</string>
    <string name="accounts_title">Рахунки</string>
    <string name="transactions_title">Транзакції</string>
    <string name="goals_title">Цілі</string>
    <string name="date_begin">Дата початку</string>
    <string name="date_end">Дата завершення</string>

    <string name="server_client_id">4f2ed5b150cfb18d0399d5722ba501d41f85eb64</string>
    <string name="server_client_sha">1073556411441–8aops584igksvtensvk4dpb190k2jta8.apps.googleusercontent.com</string>
    <string name="find_category_title">Почніть вводити назву категорії</string>
    <string name="accounts_widget_title">Рахунки</string>
    <string name="exit">Вихід</string>
    <string name="pressBack">Для виходу нажміть Назад ще раз</string>
    <string name="account_edit">Редагування рахунку</string>
    <string name="account_name">Назва рахунку</string>
    <string name="account_type">Тип рахунку</string>
    <string name="account_sum">Сума на рахунку</string>
    <string name="account_limit">Кредитний ліміт</string>
    <string name="account_members">Користувачі рахунку</string>
    <string name="active">Активні завдання</string>
    <string name="progressing">Завдання виконуються</string>
    <string name="done">Виконані завдання</string>
    <string name="other">Інші завдання</string>
    <string name="spend_time">Витрачений час</string>
    <string name="status_done">✓</string>
    <string name="status_progressing">▶</string>
    <string name="transactions_edit_title">Редагування транзакції</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="save_transaction">Зберегти</string>
    <string name="title_activity_main_temp">MainActivity2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="times">⨉</string>
    <string name="buys">Списки покупок</string>
    <string name="buy_list_edit">Редагування списку покупок</string>
    <string name="name">Назва</string>
    <string name="add_item">Додати елемент</string>
    <string name="items">Елементи списку</string>
    <string name="delete_item">Видалити елемент</string>
    <string name="buy_date">Дата покупки</string>
    <string name="buy_count">Кількість</string>
    <string name="buy_price">Ціна</string>
    <string name="buy_list_item_edit">Редагування елемента</string>
    <string name="transaction_type">Тип транзакції</string>
    <string name="settings_title">Налаштування</string>
</resources>
