<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group  android:checkableBehavior="single">
        <item
            android:id="@+id/goals"
            android:title="@string/goals"
            app:showAsAction="never"/>
        <item
            android:id="@+id/tree"
            android:title="@string/tree"
            app:showAsAction="never"/>
        <item
            android:id="@+id/calendar"
            android:title="@string/calendar"
            app:showAsAction="never"/>
        <item
            android:id="@+id/transactions"
            android:title="@string/transactions"
            app:showAsAction="never"/>
        <item
            android:id="@+id/accounts"
            android:title="@string/accounts"
            app:showAsAction="never"/>
        <item
            android:id="@+id/buys"
            android:title="@string/buys"
            app:showAsAction="never"/>
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            app:showAsAction="never"/>
    </group>
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        app:showAsAction="never"/>
</menu>